unpackaged/main/default/objects/Account/fields/First_Test_Field_20220310__c.field-meta.xml
<CustomField>
    <fullName>First_Test_Field_20220310__c</fullName>
    <label>First Test Field 20220310</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>