unpackaged/main/default/objects/Account/fields/Renamed_Foo_Field__c.field-meta.xml
<CustomField>
    <fullName>Renamed_Foo_Field__c</fullName>
    <label>Renamed Foo Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>