unpackaged/main/default/objects/Account/fields/Renamed_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Renamed_Test_Field__c</fullName>
    <label>Renamed Test Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>