unpackaged/main/default/objects/Account/fields/Test_Field_20220310__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_20220310__c</fullName>
    <label>Test Field 20220310</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>