unpackaged/main/default/objects/Account/fields/test_field__c.field-meta.xml
<CustomField>
    <fullName>test_field__c</fullName>
    <label>test field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>